# ssWWWZjj

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  environment.yaml  environment.yml  pyproject.toml  spec-list.txt
Run2_WW/: README.md
Run2_WW/CR_study/: SRvsCR.ipynb
Run2_WW/ML/BDT/: README.md  SKBDT.sub  SKBDT_wrapper.sh  makehist_SKBDT.py  train_SKBDT.py
Run2_WW/Paper_Fit/condor_jobs/full_stat/: fit.sub  trex_fit_wrapper.sh
Run2_WW/Paper_Fit/condor_jobs/stats_fit/: fit.sub  trex_fit_wrapper.sh
Run2_WW/Paper_Fit/mod_fit_configs/: Anal_ssWW_interpretation_m1000.config  Anal_ssWW_interpretation_m1500.config  Anal_ssWW_interpretation_m200.config  Anal_ssWW_interpretation_m2000.config  Anal_ssWW_interpretation_m225.config  Anal_ssWW_interpretation_m250.config  Anal_ssWW_interpretation_m275.config  Anal_ssWW_interpretation_m300.config  Anal_ssWW_interpretation_m3000.config  Anal_ssWW_interpretation_m325.config  Anal_ssWW_interpretation_m350.config  Anal_ssWW_interpretation_m375.config  Anal_ssWW_interpretation_m400.config  Anal_ssWW_interpretation_m425.config  Anal_ssWW_interpretation_m450.config  Anal_ssWW_interpretation_m475.config  Anal_ssWW_interpretation_m500.config  Anal_ssWW_interpretation_m525.config  Anal_ssWW_interpretation_m550.config  Anal_ssWW_interpretation_m600.config  Anal_ssWW_interpretation_m700.config  Anal_ssWW_interpretation_m800.config  Anal_ssWW_interpretation_m900.config
Run2_WW/Paper_Fit/scripts/: mod_fit_config.sh
Run2_WW/Processing/: mergeFiles.py
Run2_WW/WholeProcedure/: README.md  compare_limit.ipynb
Run2_WW/WholeProcedure/Attempt1/: SKBDT.sub  SKBDT_wrapper.sh  makehist_SKBDT.py  run.sh  train_SKBDT.py
Run2_WW/WholeProcedure/Attempt1/fit_configs/: generate_config.ipynb  ssWW_bdt_m1000.config  ssWW_bdt_m1500.config  ssWW_bdt_m200.config  ssWW_bdt_m2000.config  ssWW_bdt_m225.config  ssWW_bdt_m250.config  ssWW_bdt_m275.config  ssWW_bdt_m300.config  ssWW_bdt_m3000.config  ssWW_bdt_m325.config  ssWW_bdt_m350.config  ssWW_bdt_m375.config  ssWW_bdt_m400.config  ssWW_bdt_m425.config  ssWW_bdt_m450.config  ssWW_bdt_m475.config  ssWW_bdt_m500.config  ssWW_bdt_m525.config  ssWW_bdt_m550.config  ssWW_bdt_m600.config  ssWW_bdt_m700.config  ssWW_bdt_m800.config  ssWW_bdt_m900.config
Run2_WW/WholeProcedure/Benchmark/: cut.sub  cutbased_wrapper.sh  limits.root  limits_sin.root  makehist_2DFit.py
Run2_WW/scripts/: plotWWlimits.C  plot_limit_wrapper.sh
Run2_WZ/Fitting/: checkhist.ipynb  makehist_WZ.py  makehist_WZ.sub  makehist_WZ_wrapper.sh
Run2_WZ/Fitting/fit_configs/: WZ_ANN_m350_BONLY_Asimov.config  WZ_ANN_m350_BONLY_Asimov2.config  WZ_ANN_m350_BONLY_Data.config  WZ_ANN_m350_SPLUSB_Asimov.config  WZ_ANN_m350_SPLUSB_Data.config  generate_config.ipynb
Run2_WZ/compare_inputs/: compare_twoinputs.ipynb
notebooks/: NNtraining.ipynb  WIP_MLP_training_sklearn.ipynb  WIP_MLP_training_sklearn_morevars.ipynb  explore_WW.ipynb  explore_WZ.ipynb  inspect_decorated_samples.ipynb  inspect_samples.ipynb  move_decorated_samples.ipynb  move_samples.ipynb  prefityieldshpp.txt
notebooks/BDT_training1/: sklearn.ipynb
notebooks/Run2_WZ/: explore_WZ.ipynb  inspect_decorated_samples.ipynb  move_decorated_samples.ipynb
notebooks/Run2_WZ/MLP_training1/: MLP_training.ipynb
src/utils/: constants.py  histograms.py  ml.py  ml_perf.py  processing.py  utils.py
(+23 files in other folders)
